# CuriousX

./: .clang-format  .cmake-format.yaml  .gitignore  .travis.yml  CMakeLists.txt  CuriousX.js  CuriousX.wasm  Kalculator.cpp  Kalculator.h  Kalculator.hpp  LICENSE  README.md  cmake.yml  lexer.cpp  main.cpp  run.sh  script.js  scripts.js  tempCodeRunnerFile.cpp
.github/workflows/: Ubuntu.yml  cmake.yml  codeql.yml  macOS.yml  macos.yml  msvc.yml  ubuntu.yml  unittest.yml  wasm.yml  windows.yml
AST/: ASTNode.hpp  Expressions.hpp  Parser.cpp  Parser.hpp  Tree.cpp  Tree.hpp
CodeGen/: CMakeLists.txt  Readme.md
CodeGen/include/: Codegen.hpp  Register.hpp
CodeGen/src/: Codegen.cpp
CompilerEditor/: index.html  script.js  style.css
CompilerUtils/: CompilerOutput.hpp  CompilerOutputParser.hpp  Error.hpp  Node.hpp  SemGen.hpp  SourceLocation.hpp  SymbolTable.hpp  input.txt
CuriousX/: Compiler.cpp  Compiler.hpp  main.cpp
CuriousX/Generation/: Codegen.cpp  Codegen.hpp  README.md  Semantic.cpp  Semantic.hpp  WasmInstructions.hpp
CuriousX/Lexer/: Lexer.hpp  LexerToken.cpp  LexerToken.hpp  Readme.md
CuriousX/Parser/: Node.hpp  Parser.cpp  Parser.hpp  README.md
CuriousX/Semantic/: README.md  Readme.md  Semantic.cpp  Semantic.hpp  SymbolTable.hpp
Editor/: CuriousX.js  CuriousX.wasm  index.html  script.js  style.css
Lexer/: Lexer.hpp  LexerToken.cpp  LexerToken.hpp  README.md  lexer.cpp  tokenizer.cpp  tokenizer.hpp
LexicalAnalysis/: CMakeLists.txt  Lexer.hpp  LexerToken.cpp  LexerToken.hpp  Readme.md
LexicalAnalysis/include/: Lexer.hpp  LexerToken.hpp
LexicalAnalysis/src/: LexerToken.cpp
Parser/: Parser.cpp  Parser.hpp
SemanticAnalysis/: CMakeLists.txt  README.md
SemanticAnalysis/include/: Semantic.hpp  SymbolTable.hpp  semantic.hpp
SemanticAnalysis/src/: Semantic.cpp  semantic.cpp
SyntaxAnalysis/: CMakeLists.txt  README.md
SyntaxAnalysis/include/: Node.hpp  Parser.hpp
SyntaxAnalysis/src/: Parser.cpp
Utils/: ArgumentParser.hpp  CompilerOutputParser.hpp  Error.hpp  FileHandler.hpp  Node.hpp  SourceLocation.hpp  input.txt  json.hpp  test.py
include/: lexer.hpp
resource/: input.txt
src/: lexer.cpp
tests/: CMakeLists.txt  Compiler_test.cpp  codegen_test.cpp  curiousTest.cpp  lexerTest.cpp  lexer_test.cpp  parser_test.cpp  semantic_test.cpp  testfile_1.txt  testfile_1ex.txt
utils/: ErrorHandler.hpp  FileHandler.hpp  Operations.hpp  input.txt  sourcelocation.hpp
web/: CuriousX.html  index.html  scripts.js  style.css
